syntax = "proto3";

import "google/protobuf/any.proto";

enum LogLevelPB {
  DEBUG = 0;
  INFO = 1;
  WARN = 2;
  ERROR = 3;
  FATAL = 4;
}

message LogEntryPB {
  LogLevelPB level = 1;
  int64 timestamp = 2;
  string bcName = 3;
  string appName = 4;
  string appVersion = 5;
  string component = 6;
  string message = 7;
  google.protobuf.Any meta = 8;
}
